fixed an issue with resource names appearing behind level bars

--- a/sass/resources.scss
+++ b/sass/resources.scss
@@ -124,6 +124,11 @@
             .min {
                 left: 0;
             }
+
+            .name {
+                position: absolute;
+                width: 100%;
+            }
         }
     }
 }
